Updated the layout

--- a/site/css/_globals.scss
+++ b/site/css/_globals.scss
@@ -1,6 +1,10 @@
 $min-screen-width: 320px;
 $max-screen-width: 1024px;
 
+$mobile-breakpoint: 425px;
+
+$content-padding: 2em;
+
 $min-font-size: 16px;
 $mobile-mod: 1.2;
 $desktop-mod: 1.5;
