--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div id="hero">
+<div id="hero" class="fit">
     <h1 class="cling">Welcome to SmileBuddies.lol!</h1>
     <div class="text">
         Haha, hope you have fun!
