--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,13 @@
             <div class="container">
                 <div class="fit">
                     <a href="{% url "landing" %}"><div class="logo">SmileBuddies</div></a>
-                    <div class="notifications">😊</div>
+                    <div class="navigation">
+                        {% if user.is_authenticated %}
+                        <a href="{% url 'accounts:logout' %}">Sign Out</a>                        
+                        {% else %}
+                        <a href="{% url 'accounts:login' %}">Sign In</a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
